--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site settings
 title: Go For the Extra Miles
-email: your-email@domain.com
+email: dylanchen14@sina.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: /blog_pages # change this to the subpath of your site, e.g. /blog. Leave it empty if you don't need it.
-url: "https://lorepirri.gitlab.io" # change this to the base hostname & protocol for your site
+baseurl: "/blog_pages" # change this to the subpath of your site, e.g. /blog. Leave it empty if you don't need it.
+url: "https://dylanchen0114.github.io/" # change this to the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
@@ -42,7 +42,7 @@ header:
 
 # social
 author:
-  name: "Simple Blog Theme"
+  name: "Dylan"
   short_bio:
     en: Jekyll Blog Theme, Responsive, SEO and Facebook enabled
     it: Jekyll Blog Theme, Responsive, con SEO e integrazione Facebook
@@ -67,11 +67,11 @@ facebook:
 
 # gitlab on site
 gitlab:
-  owner_url: https://gitlab.com/lorepirri
+  owner_url: https://github.com/dylanchen0114
 
 # github on site
 github:
-  owner_url: https://github.com/lorepirri
+  owner_url: https://github.com/dylanchen0114
 
 
 # translation
