--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 permalink:      /:year-:month-:day/:title
 
 # Setup
-title:          Tale
+title:          Go For the Extra Miles
 paginate:       5
 baseurl:        "/blog_pages"
 url:            "https://dylanchen0114.github.io"
