--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,11 @@
 minimal_mistakes_skin    : "mint"
 
 # Site Settings
-locale                   : "en"
-title                    : "Site Title"
+locale                   : "zh-CN"
+title                    : "Dylan's Mini Blog"
 title_separator          : "-"
-name                     : "Your Name"
-description              : "An amazing website."
+name                     : "Dylan Chen"
+description              : "notes about machine learning."
 url                      : "https://dylanchen0114.github.io"
 baseurl                  : "/"
 repository               : "dylanchen0114/blot_pages"
@@ -51,7 +51,7 @@ reCaptcha:
   secret                 :
 atom_feed:
   path                   : # blank (default) uses feed.xml
-search                   : # true, false (default)
+search                   : true
 
 # SEO Related
 google_site_verification :
