--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "Dylan's Mini Blog"
 title_separator          : "-"
 name                     : "Dylan Chen"
 description              : "notes about machine learning."
-url                      : "https://dylanchen0114.github.io"
+url                      : "www.dylan-chen.com"
 baseurl                  : "/"
 repository               : "dylanchen0114/blot_pages"
 teaser                   : "/docs/ssets/images/500x300.png"
