--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,10 +3,10 @@ main:
   # - title: "Quick-Start Guide"
   #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   - title: "About"
-    url: https://dylanchen0114.github.io/blog_pages/about/
-  # - title: "Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
+    url: /about/
+  - title: "Posts"
+  url: /year-archive/
+  #  - title: "Sample Collections"
   #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
+  - title: "Sitemap"
+    url: /sitemap/
