--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,10 +3,10 @@ main:
   # - title: "Quick-Start Guide"
   #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   - title: "About"
-    url: _/pages/about/
-  - title: "Posts"
-  url: _/pages/year-archive/
-  #  - title: "Sample Collections"
+    url:  /about/
+  # - title: "Sample Posts"
+  #   url: /year-archive/
+  # - title: "Sample Collections"
   #   url: /collection-archive/
-  - title: "Sitemap"
-    url: _/pages/sitemap/
+  # - title: "Sitemap"
+  #   url: /sitemap/
