--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   avatar           : "/assets/images/bi-photo.png"
   bio              : "data scientist newbie, want to be a kaggle master someday"
   location         : "Shanghai, China"
-  email            : "www.dylanchen0114.com"
+  email            : "dylanchen14@sina.com"
   uri              :
   home             : # null (default), "absolute or relative url to link to author home"
   bitbucket        :
