--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "github.com/dylanchen0114"
+  github           : "dylanchen0114"
   gitlab           :
   google_plus      :
   keybase          :
