--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ analytics:
 author:
   name             : "Dylan Chen"
   avatar           : "/assets/images/bi-photo.png"
-  bio              : "data scientist newbie, want to be a kaggle master someday"
+  bio              : ""
   location         : "Shanghai, China"
   email            : "dylanchen14@sina.com"
   uri              :
